[tool.poetry]
name = "jembe"
version = "0.3.0"
description = "Jembe core package - v3 new concept"
authors = ["Predrag Peranovic <predrag.peranovic@blokkod.me>"]
license = "AGPL-3.0-only"
packages = [
    { include = "jembe" },
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
