[tool.poetry]
name = "jembe"
version = "0.3.0"
description = "Jembe Web Framework"
license = "LGPL-3.0-only"
authors = ["Predrag Peranovic <predrag.peranovic@blokkod.me>"]
readme = "README.rst"
homepage = "https://jembe.io"
repository = "https://github.com/Jembe/jembe"
keywords = ["framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "jembe" },
]
include = [
    "LICENSE", "README.rst"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
lxml = "^4.5.2"
simplejson = "^3.17.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.780"
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
watchdog = {extras = ["watchmedo"], version = "^0.10.3"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["jembe"]
branch = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
