[metadata]
name = jembe
version = 0.3.1
description = Jembe Web Framework
license = AGPL-3.0-only
license_files = LICENSE
author = Predrag Peranovic
author_email = predrag.peranovic@jembe.io
long_description = file: README.rst
url= https://jembe.io
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    License :: Other/Proprietary License
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks
keywords = ["framework"]
project_urls=
    Repository = https://github.com/Jembe/jembe

[options]
packages = jembe
include_package_data = True
python_requires = >=3.8
install_requires = 
    flask >= 1.1.2
    lxml >= 4.5.2
    simplejson >= 3.17.2 

[options.extras_require]
dev = 
    black
    mypy
    pytest
    coverage [toml]
    watchdog [watchmedo]