[metadata]
name = jembe
version = 0.3.14
description = Jembe Web Framework
license = LGPL-3.0-or-later
license_files = LICENSE
author = Predrag Peranovic
author_email = predrag.peranovic@jembe.io
long_description = file: README.md
long_description_content_type = text/markdown
url= https://jembe.io
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks
keywords = ["framework"]
project_urls=
    Repository = https://github.com/Jembe/jembe

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires = 
    flask >= 1.1.2
    lxml >= 4.5.2
    simplejson >= 3.17.2 

[options.packages.find]
exclude = tests

[options.extras_require]
dev = 
    black
    mypy
    pytest
    coverage [toml]
    watchdog [watchmedo]
    sphinx
    furo


[options.entry_points]
console_scripts = 
    jembe = jembe.cli.jembe:jembe